add integration with the database; node and edge manipulations
